/**
 * Web traveler channel renderer snapshot coverage.
 *
 * Snapshots pin the JSON envelope the traveler-side bubble layer
 * consumes. Web is the second-cleanest channel (after operator) but
 * still drops operator-only kinds (reasoning, tool_invocation,
 * approval_request) and silently ignores traveler-authored echoes.
 *
 * Run: bun test apps/app/lib/channel-render/__tests__/web.test.ts
 */

import { describe, expect, test } from 'bun:test';

import { renderForWeb } from '../channels/web';
import { fixtures, travelerAuthor } from './__fixtures__/messages';

describe('renderForWeb', () => {
  test('text bubble keeps markdown intact for client-side rendering', async () => {
    const out = await renderForWeb(fixtures.text());
    expect(out?.payload.bubble).toBe('text');
    const content = out?.payload.content as { markdown: string };
    expect(content.markdown).toContain('**AA 100**');
    expect(out).toMatchSnapshot();
  });

  test('card bubble passes ctas straight through', async () => {
    const out = await renderForWeb(fixtures.card());
    expect(out?.payload.bubble).toBe('card');
    const content = out?.payload.content as { ctas: unknown[] };
    expect(content.ctas).toHaveLength(2);
    expect(out).toMatchSnapshot();
  });

  test('tool_result with share renders a card bubble', async () => {
    const out = await renderForWeb(fixtures.toolResult());
    expect(out?.payload.bubble).toBe('card');
    expect(out).toMatchSnapshot();
  });

  test('tool_result without share returns null', async () => {
    const out = await renderForWeb(fixtures.toolResult({ share: undefined }));
    expect(out).toBeNull();
  });

  test('tool_invocation returns null (operator-only)', async () => {
    const out = await renderForWeb(fixtures.toolInvocation());
    expect(out).toBeNull();
  });

  test('approval_request returns null (operator-only)', async () => {
    const out = await renderForWeb(fixtures.approvalRequest());
    expect(out).toBeNull();
  });

  test('reasoning returns null (operator-only)', async () => {
    const out = await renderForWeb(fixtures.reasoning());
    expect(out).toBeNull();
  });

  test('sources bubble surfaces every item', async () => {
    const out = await renderForWeb(fixtures.sources());
    expect(out?.payload.bubble).toBe('sources');
    const content = out?.payload.content as { items: unknown[] };
    expect(content.items).toHaveLength(2);
    expect(out).toMatchSnapshot();
  });

  test('sources with empty items returns null', async () => {
    const out = await renderForWeb(fixtures.sources({ items: [] }));
    expect(out).toBeNull();
  });

  test('traveler-authored messages return null (operator side echoes those)', async () => {
    const out = await renderForWeb(fixtures.text({ author: travelerAuthor }));
    expect(out).toBeNull();
  });
});
